# stock-advisor

./: README.md  requirements.txt
.github/workflows/: prod__append-last-trading-day.yaml  prod__run-dagster.yaml  prod__update-fundamentals-daily.yaml  prod__update-statements.yaml
EtL/: README.md  cli.md  go.mod  go.sum  main.go
EtL/cmd/: docs.go  eod_backfill.go  eod_daily.go  fundamentals.go  root.go
EtL/extract/: fetch.go  fetch_test.go
EtL/load/: duckdb.go  duckdb_test.go
EtL/pipeline/: pipelines.go  pipelines_test.go
EtL/sql/: table__daily_adjusted.sql
dashboard/: README.md
dashboard/src/: _router.py
dashboard/src/dashboards/: docs.py  main.py  stock_picker.py
dashboard/src/utils/: duck.py
init-db/: README.md
transformations/: README.md  pyproject.toml
transformations/src/: catboost_trainer.py  dagster_catboost.py
transformations/src/sql/: 1_wide_statements.sql  4_excess_returns.sql
