[project]
name = "transformations"
version = "0.1.0"
description = "Data and ML pipeline transformations, orchstrated by Dagster"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "catboost>=1.2.7",
    "dagster>=1.10.2",
    "dagster-postgres>=0.26.2",
    "duckdb>=1.2.0",
    "duckdb-engine>=0.15.0",
    "ipywidgets>=8.1.5",
    "numpy>=1.26.4",
    "pandas>=2.2.3",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "scikit-learn>=1.6.1",
    "shap>=0.46.0",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "dagster-webserver>=1.10.2",
    "ipykernel>=6.29.5",
    "pyright>=1.1.394",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.7",
]
